Bug 156620 - A11Y sidebar: not clickable warning about tables containing headings
Summary: A11Y sidebar: not clickable warning about tables containing headings
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.1
Keywords:
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-08-04 19:23 UTC by Gabor Kelemen (Collabora)
Modified: 2023-08-15 06:20 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-08-04 19:23:58 UTC
attachment 188740 [details] has a table with a paragraph formatted with Heading style.
The accessibility sidebar gives a warning about this, but no hyperlink to highlight the issue.
Screenshot is attachment 188741 [details]

1. Open attached file
2. Open the Accessibility sidebar
3. Observe the warning "Tables must not contain headings."
-> Should have a clickable link to highlight the Heading-formatted paragraph in the table.

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: eff5a3fe98ca5d1d28c4f5386c4af8a3be8f5703
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Commit Notification 2023-08-14 15:26:35 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8d2ab36f41f8f11e9f5986bba6ebb5b95d7e1eef

tdf#156620 - A11Y - fix not clickable warning about tables have headings

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-08-15 06:20:57 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/95db490b23ce10cc220bc7e09a3e6d213bd7a7fd

tdf#156620 - A11Y - fix not clickable warning about tables have headings

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.