tdf#156620 - A11Y - fix not clickable warning about tables have headings

Make warning messages clickable and go to the problematic paragraph.

Change-Id: I5ca0b33b6f50b5d08993ebd0fc2749804e80de48
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155587
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>